# mz07f

./: CMakeLists.txt  package.xml
launch/: display.launch  gazebo.launch
meshes/: base_link.STL  link_1.STL  link_1_logo_left.STL  link_1_logo_right.STL  link_2.STL  link_3.STL  link_4.STL  link_4_logo_left.STL  link_4_logo_right.STL  link_5.STL  link_6.STL
urdf/: mz07f.csv  mz07f.urdf
